--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <body>
   <title>HEY</title>
 
+<head>
+</head>
   <body>
   <h1> id='wow'>Embarrassing Photos of Kion...</h1>
 <p> id='wow'>...and why.<p>
