--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <head>
 </head>
   <body>
-  <h1> id='wow'>Embarrassing Photos of Kion...</h1>
-<p> id='wow'>...and why.<p>
+  <h1>Embarrassing Photos of Kion...</h1>
+<p>...and why.<p>
 <h2> #1</h2>
 <img src=http://i.ytimg.com/vi/rLhf7ICsgJ0/hqdefault.jpg
      <div>
